<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ellioc.hearhere.SynthFragment">

    <!-- TODO: Update blank fragment layout -->


    <android.support.constraint.Guideline
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/control_separator"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="261dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.7521614" />

    <ToggleButton
        android:text="@string/record_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/record_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="@+id/control_separator"
        android:textOff="@string/record_off"
        android:textOn="@string/record_on"
        app:layout_constraintLeft_toLeftOf="@+id/soundboard"
        app:layout_constraintVertical_bias="0.18"
        android:fontFamily="sans-serif-medium"
        android:textSize="14sp"
        android:checked="false" />

    <Button
        android:text="@string/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/play_button"
        app:layout_constraintBottom_toBottomOf="@+id/record_button"
        app:layout_constraintTop_toTopOf="@+id/record_button"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintRight_toRightOf="@+id/soundboard" />

    <android.support.v7.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/control_separator"
        android:layout_marginBottom="8dp"
        android:id="@+id/soundboard"
        app:columnCount="3"
        app:rowCount="2"
        app:layout_constraintVertical_bias="0.65999997">

        <ImageView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            app:srcCompat="@android:color/holo_green_light"
            android:id="@+id/topleft"
            android:adjustViewBounds="false"
            android:contentDescription="@string/sound2"/>

        <ImageView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            app:srcCompat="@android:color/holo_blue_dark"
            android:id="@+id/topmiddle"
            android:adjustViewBounds="false"
            android:contentDescription="@string/sound3"/>

        <ImageView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            app:srcCompat="@android:color/holo_purple"
            android:id="@+id/topright"
            android:adjustViewBounds="false"
            android:contentDescription="@string/sound4"/>

        <ImageView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            app:srcCompat="?android:attr/colorActivatedHighlight"
            android:id="@+id/bottomleft"
            android:adjustViewBounds="false"
            android:contentDescription="@string/sound5"/>

        <ImageView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            app:srcCompat="@android:color/holo_red_dark"
            android:id="@+id/bottomright"
            android:adjustViewBounds="false"
            android:contentDescription="@string/sound1"/>

        <ImageView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            app:srcCompat="@android:color/white"
            android:id="@+id/bottommiddle"
            android:adjustViewBounds="false"
            android:contentDescription="@string/sound6"/>

    </android.support.v7.widget.GridLayout>

</android.support.constraint.ConstraintLayout>
