<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ellioc.hearhere.MainActivity"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text1"
        android:id="@+id/button1"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/imageView4"
        android:layout_toStartOf="@+id/imageView4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text2"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/imageView3"
        android:layout_toStartOf="@+id/imageView3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/snare_icon"
        android:contentDescription="@string/tappingImage"
        android:contextClickable="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view"
        android:layout_toLeftOf="@+id/view2"
        android:layout_toStartOf="@+id/view2" />

    <View style="@style/Divider"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:background="#54020202"
        android:id="@+id/view" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/kick_icon"
        android:contentDescription="@string/tappingImage"
        android:layout_above="@+id/view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View style="@style/DividerVertical"
        android:background="#54020202"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:id="@+id/view2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/tapping_image"
        android:contentDescription="@string/tappingImage"
        android:layout_above="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@drawable/tapping_image"
        android:contentDescription="@string/tappingImage"
        android:layout_alignTop="@+id/imageView2"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3" />


</RelativeLayout>
